# desktop-shadertoy

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  default-shader.json  shader.json  vcpkg.json
cmake/: appimage.cmake  deps.cmake  packaging.cmake
cmake/appimage/: desktop-shadertoy.desktop
cmake/appimage/AppDir/: .DirIcon  AppRun  desktop-shadertoy.desktop
cmake/overlay-ports/glslang/: allow-empty-functional-macro.patch  portfile.cmake  vcpkg.json
cmake/overlay-ports/openssl/: vcpkg.json
src/: main.cpp  main.glsl  main.inl  thread_pool.hpp  viewport.cpp  viewport.glsl  viewport.hpp  viewport.inl
src/app/: core.inl  resources.cpp  resources.hpp  viewport.cpp  viewport.glsl  viewport.hpp  viewport.inl
src/core/: core.inl  ping_pong_resource.hpp  task_template.hpp
src/rml/: render_daxa.cpp  render_daxa.hpp  system_glfw.cpp  system_glfw.hpp
src/ui/: app_ui.cpp  app_ui.hpp  app_window.cpp  app_window.hpp  hello_world.rml  main.rcss  main.rml  rml.rcss  window.rcss
src/ui/components/: buffer_panel.cpp  buffer_panel.hpp  buffer_panel.rcss  buffer_panel.rml  buffer_panel_input_window.rml  buffer_tab.rml  settings_window.rcss  settings_window.rml
src/ui/rml/: render_daxa.cpp  render_daxa.hpp  system_glfw.cpp  system_glfw.hpp
